PUT /results/{resultId} implemented
