# src/Controller/ApiResultsCommandInterface.php
@@ -22,6 +22,16 @@ interface ApiResultsCommandInterface
     public function postAction(Request $request): Response;
 
     /**
+     * **PUT** action<br>
+     * Summary: Updates the Result resource.<br>
+     * _Notes_: Updates the result identified by &#x60;_resultId_&#x60;.
+     *
+     * @param Request $request request
+     * @param int $resultId Result id
+     */
+    public function putAction(Request $request, int $resultId): Response;
+
+    /**
      * **DELETE** Action<br>
      * Summary: Removes the Result resource.<br>
      * _Notes_: Deletes the result identified by &#x60;resultId&#x60;.
